css/styles.css
@import url(https://fonts.googleapis.com/css?family=Lato:400,300,100,100italic,300italic,400italic,700,700italic|Roboto+Slab:400,100,300,700);

html {
  background-color:rgb(0, 0, 0);
  overflow:hidden;
}

*, ::after, ::before {
  box-sizing: border-box;
}

::selection {
  color: white;
  background: rgb(125, 120, 115);
}

body {
  font-family: Geneva, Verdana, sans-serif;
  scroll-behavior: smooth;
  display: block;
  min-width: 320px;
  max-width: 2000px;
}

ul {
  list-style: none;
}

/* Animations */ 
.animation {
  animation: anim 4s infinite alternate;
}

@keyframes anim {
  from {
      background-position: 0%;
  }
  to {
      background-position: 100%;
  }
}

/* Header */
header {
    padding: 30px;
    text-align: center;
    font-size: 35px;
    background: linear-gradient(135deg,#9d9993e5, #7f7e7a, #434038, #5a5854, #9c9996);
    background-size: 400%;
    color: white;
}

/* Footer */
footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding: 70px;
  margin-top: 1.5rem;
  font-size: 10px;
  width: 100%;
  background:rgb(230, 219, 204);
  color: black;
}

.socials-icons {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.socials-icons img {
  width: 40px;
  height: 40px;
  padding: 5px;
}

footer > div {
  font-size: 150%;
  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

/* Body */

/* Author Image Container */

.authorContainer {
  position: relative;
  width: 50%;
  height: 100%;
  margin-left: auto;
  margin-right: auto;
  border-radius: 5px;
  border-color: #ffffff;
  margin-bottom: 35px;
  border-radius: 100px;
  margin: 0 8% 0 3.5%;
}

.authorImage {
  display: block;
  max-width: 100%;
  height: auto;
  margin-left: auto;
  margin-right: auto;
  border-radius: 100px;
}

.overlay {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  background: linear-gradient(135deg,#9d9993, #e3dbc3, #434038, #bfb7a6, #e8ddd4);
  /* animation: anim 4s infinite alternate; */
  background-size: 400%;
  overflow: hidden;
  width: 0;
  height: 100%;
  transition: .5s ease;
  border-radius: 100px;
}

.authorContainer:hover .overlay {
  width: 100%;
}

.authorText {
  white-space: nowrap; 
  color: rgb(255, 255, 255);
  font-size: 200%;
  position: absolute;
  overflow: hidden;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
}


/* Typewriter Animation Effect */

.typewriter {
  overflow: hidden; /* Ensures the content is not revealed until the animation */
  border-right: .15em solid rgb(230, 219, 204); /* The typwriter cursor */
  white-space: wrap;
  letter-spacing: .20em; /* Adjust as needed */
  font-size: 130%;
  display: block;
  font-size: 1.5em;
  margin-block-start: 0.83em;
  margin-block-end: 0.83em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
  font-weight: bold;
  animation: 
    typing 5s steps(40, end),
    blink-caret .75s step-end infinite;
    
}

@media only screen and (min-width: 620px) {
  
  .typewriter {
    white-space: nowrap;
  }

}

/* The typing effect */
@keyframes typing {
  from { width: 0 }
  to { width: 100% }
}

/* The typewriter cursor effect */
@keyframes blink-caret {
  from, to { border-color: transparent }
  50% { border-color: #c5c1b0 }
}

/* Links */
a {
    text-decoration: none;
    transition: all 0.5s;
}

a:visited, a:active { 
  text-decoration: none; 
  color: rgb(194, 177, 177); 
 }

 /* Timeline Styling */

html {
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body {
  background-color: #fff;
}

.CV-page {
  max-width: 700px;
  margin: 0 auto;
  padding: 0 2em;
  color: #222222;
  font-size: 1em;
  font-family: 'Lato', sans-serif;
}

@media all and (max-width: 500px) {
  .CV-page {
    padding: 0 1em;
  }
}
/* if IE<=7 */

.CV-page\ {
  width: 1100px;
  font-family: "Comic Sans MS", "Comic Sans", cursive;
}

.CV-secondaryHeading {
  position: relative;
  margin: 2em 0 0;
  text-transform: uppercase;
}
/* Grid
****************************************************/

.CV-grid {
  display: table;
}

.CV-grid-column {
  display: table-cell;
}

.CV-timeline {
  position: relative;
  margin: 0 0 0 0.5em;
  padding-left: 1.5em;
  border-left: solid 1px #222222;
}

.CV-timeline:first-of-type {
  margin-top: 1em;
}

.CV-timeline:last-of-type {
  border-left-color: transparent;
}

.CV-timeline:before {
  content: "";
  position: absolute;
  top: 0;
  left: -0.5em;
  display: block;
  width: 1em;
  height: 1em;
  border: solid 1px #222222;
  background-color: #ffffff;
  border-radius: 50%;
}

.CV-timeline-heading {
  margin: 0;
  padding-bottom: 0.5em;
  line-height: 1em;
  font-weight: normal;
  -webkit-transform: translateY(-0.1em);
  -ms-transform: translateY(-0.1em);
  transform: translateY(-0.1em);
}

.CV-timeline-heading-title {
  line-height: 1;
  color:rgb(177, 175, 174);
  font-style: italic;
  text-transform: uppercase;
}

.CV-timeline-heading-location {
  font-size: 0.9em;
}

.CV-timeline-heading-duration {
  display: block;
  font-size: 0.8em;
  color: #6f6f6f;
}

.CV-timeline-details {
  display: block;
  margin: 0;
  padding-bottom: 2em;
  padding: 0 0 2em 1em;
  list-style-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAGElEQVQIW2NkYGD4D8TIgJERTQDMpVAQAGaUAQbko3DsAAAAAElFTkSuQmCC");
}

.CV-timeline-details-item {
  margin-bottom: 0.5em;
}


/** Navigation Bar Section */

.navbar-home {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 15px;
  padding-bottom: 15px;
  /*background: linear-gradient(135deg,#9d9993e5, #fffdf6, #eae8e1, #e9e5dd, #e0dbd7);*/
  /*background: linear-gradient(135deg,#abaaa9e5, #3a3939, #000000, #626161, #464645);*/
  background: white;
  background-size: 400%;
}

.nav-links ul {
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: row;
}

.nav-links li a {
  padding-left: 50px;
  padding-right: 50px;
  font-weight: 400;
  color: rgba(161, 160, 160, 0.767);
}

.nav-links a:hover {
  color: black;
}

.toggle-button {
  position: absolute;
  top: 0.75rem;
  right: 1rem;
  display: none;
  flex-direction: column;
  justify-content: space-between;
  width: 30px;
  height: 21px;
}

.toggle-button .toggle-bar {
  height: 3px;
  width: 100%;
  background-color:rgb(0, 0, 0);
  border-radius: 20px;
}

/** About Section */
#about-me-info {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
}

#about-me-imgs {
  padding: 15px;
}

#about-me-info img {
  height: 350px;
  padding: 10px;
  width: 350px;
  border-radius: 20px;
}

#background-info {
  padding: 15px;
  text-align: center;
}

#background-info p {
  text-align: left;
}

#banner {
  background-color:rgb(0, 0, 0);
  color:rgb(255, 255, 255);
  width: 100%;
  text-align: center;
}

/* Introduction Section
   ========================================================================== */
   
/**
 * Index-Introduction
 */ 
 
 .index-introduction {
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding-top: 50px;
}

 /**
  * Centering introduction Flex Box Content
  */ 

 .introduction {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding-left: 20px;
  padding-right: 20px;
}

/**
  * Introduction's Author Name
  */
 .index-introduction h1 b {
  color:rgb(177, 175, 174);
    /* HOVER OFF */
    -webkit-transition: padding 2s;
    transition: 2s;
}

.index-introduction h1 :hover {
  background-color: #d1ceca;
  transition: all ease 0.8s;
  color:#212529;
  border-radius: 10px;
  padding: 10px;
}

@keyframes blinking {
  0% {
    color: transparent;
  }
  100% {
    color: black;
  }
}

/**
 * Salutation
 */

 .salutation {
  display: flex;
  flex-direction: row;
}


/**
 * Type
 */
 .salutation #type {
  animation: blinking 0.9s infinite;
}



/* Buttons
   ========================================================================== */

/**
 * I
 */

 .btn-outline-dark {
  color: #212529;
  border-color: #212529;
}

/* Skills Section
   ========================================================================== */

/**
 * Banner
 */ 
 
 #about-n-experience-banner {
  text-align: center;
  margin-top: 15px;
  margin-bottom: 15px;
}

/**
 * Container
 */ 

 #skills-section {
  text-align: center;
 }

#skills-section img {
  width: 100px;
  height: 100px;
  padding-left: 0.5%;
  padding-right:0.5%;
  margin-bottom: 1.0%;
  margin-top: 1.0%;
}


/**
 * Animated Icons
 */ 
 #up {
  animation: up-anim 3.5s infinite;
 }

 #down {
  animation: down-anim 3.1s infinite;
 }

 #rand {
  animation: rand-anim 2s infinite;
 }

 @keyframes up-anim {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-7px);
  }
  100% {
    transform: translateY(0);
  }
 }

 @keyframes down-anim {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(7px);
  }
  100% {
    transform: translateY(0);
  }
 }

 @keyframes rand-anim {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-6px);
  }
  100% {
    transform: translateY(0);
  }
}
 
/* Responsive Layout
   ========================================================================== */

/**
 * Media queries for screens smaller than 801px
 */  

@media only screen and (max-width: 1300px) {


@media only screen and (max-width: 600px) {
  .authorText {
    font-size: 100% !important;
  }
}
/** 
 * Responsive Author Container
 */

 .authorContainer {
  margin: 0px 50% 0px 50%;
 }
  
  .authorText {
  font-size: 200%;
}


/** 
 * Responsive Navigation Bar 
 */

.toggle-button {
  display: flex;
}

.nav-links {
  display: none;
  width: 100%;
}

.navbar {
  flex-direction: column;
  align-items: flex-start;
}

.navbar-home {
  flex-direction: column;
  align-items: flex-start;
}

.nav-links ul {
  flex-direction: column;
  width: 100%;
}

.nav-links ul li {
  text-align: center;
}

.nav-links.active {
  display: flex;
  
}

.nav-links li:hover {
  background-color: #d3d2d24f;
}

  /**responsive index*/
  .index-introduction {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .index-introduction .introduction {
    margin-top: 5px;
    margin-left: 10px;
    margin-right: 10px;
    text-align: center;
    font-size: 60%;
  }

  .index-introduction .salutation {
    margin-left: 10px;
    margin-right: 10px;
    text-align: center;
  }

  .index-introduction h5 {
    font-size: 14px;
  }

  .introduction {
    justify-content: center;
    align-items: center;
    margin-bottom: 5%;
  }

  .introduction-name {
    display: block
  }

/* Responsive About Section */
#about-me-info {
  text-align: center;
  flex-direction: column;
}

header {
  font-size: 1.5rem;
}
}
/** ---------------------------------- **/

